Iniciar a criacao do aside

--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
             <img src="img/hand.png" alt="mao">
         </div>
     </header>
+    <aside>
+        <div>
+            <header>
+                <img src="img/icone1.png" alt="">
+            </header>
+            <section>
+                <img src="img/icone2.png" alt="">
+            </section>
+            <footer>
+                <img src="img/icone3.png" alt="">
+            </footer>
+        </div>
+    </aside>
     <section></section>
-    <aside></aside>
     <div></div>
     <footer></footer>
 </body>
