Fazer o aside (segunda linha do grid)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <div>
                 <h1>Notify<span>.</span></h1>
-                <h3>A great new free psd theme to showcase your new aplication.</h3>
+                <h3>A great new free psd theme to showcase your new application.</h3>
                 <div>
                     <a href=""><img src="img/icone-ios.png" alt=""></a>
                     <a href=""><img src="img/icone-android.png" alt=""></a>
@@ -30,13 +30,19 @@
     <aside>
         <div>
             <header>
-                <img src="img/icone1.png" alt="">
+                <div><img src="img/icone1.png" alt=""></div>
+                <h2>Editable Theme</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam facere</p>
             </header>
             <section>
-                <img src="img/icone2.png" alt="">
+                <div><img src="img/icone2.png" alt=""></div>
+                <h2>Flat Design</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam facere</p>
             </section>
             <footer>
-                <img src="img/icone3.png" alt="">
+                <div><img src="img/icone3.png" alt=""></div>
+                <h2>Reach Your Audience</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam facere</p>
             </footer>
         </div>
     </aside>
