Criar o section (terceira linha do grid)

--- a/index.html
+++ b/index.html
@@ -46,8 +46,24 @@
             </footer>
         </div>
     </aside>
-    <section></section>
-    <div></div>
+    <section>
+        <div>
+            <div>
+                <h2>Get Notified Of Any Updates!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est illo officia mollitia eum, pariatur animi molestiae rem dicta veritatis suscipit explicabo? Ipsum consequatur aliquid incidunt voluptates eius impedit facilis nesciunt.</p>
+                <form action="">
+                    <input type="email" name="email" id="email" placeholder="Email Address">
+                    <button>Notify</button>
+                </form>
+            </div>
+            <aside>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z4duRV5osro" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </aside>
+        </div>
+    </section>
+    <div>
+        
+    </div>
     <footer></footer>
 </body>
 </html>
