Adicionar as ancoras no footer

--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
         </div>
     </section>
     <div>
-        
+
     </div>
-    <footer></footer>
+    <footer>
+        <div>
+            <a href="">Contact</a>
+            <a href="">Download</a>
+            <a href="">Press</a>
+            <a href="">Email</a>
+            <a href="">Support</a>
+            <a href="">Private Policy</a>
+        </div>
+    </footer>
 </body>
 </html>
