Finalizar site na versao nao responsiva

--- a/index.html
+++ b/index.html
@@ -61,8 +61,40 @@
             </aside>
         </div>
     </section>
-    <div>
-
+    <div class="div-linha5">
+        <div class="alinhar-paragrafo"><h4>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas laudantium numquam laborum non ex expedita, quibusdam quo fugit possimus corporis? Vitae, suscipit. Officiis unde ipsum deserunt, cum veritatis molestias minima!"</h4></div>
+        <h3>Jane Hunt</h3>
+        <div>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+            <a href=""><img src="img/pessoa1.jpg" alt=""></a>
+        </div>
+        <h2>Say Hi & Get in Touch</h2>
+        <p>Lorem adipisicing elit. Labore nam officia veniam exercitationem! Dolorum totam maxime quaerat.</p>
+        <header>
+            <a href=""><img src="img/twitter-logo-button.png" alt=""></a>
+            <a href=""><img src="img/facebook-logo-button.png" alt=""></a>
+            <a href=""><img src="img/pinterest.png" alt=""></a>
+            <a href=""><img src="img/google-plus-logo-button.png" alt=""></a>
+            <a href=""><img src="img/linkedin.png" alt=""></a>
+            <a href=""><img src="img/youtube-logotype.png" alt=""></a>
+        </header>
     </div>
     <footer>
         <div>
